Closed
Bug 1483806
Opened 7 years ago
Closed 7 years ago
Perma bustage at js/src/jit/CacheIR.h:1964:10: error: private field 'op_' is not used [-Werror,-Wunused-private-field] when Gecko 63 merges to Beta on 2018-08-27
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | - | verified |
People
(Reporter: aryx, Assigned: mgaudet)
References
Details
Attachments
(1 file, 2 obsolete files)
|
1.65 KB,
patch
|
evilpies
:
review+
|
Details | Diff | Splinter Review |
central as beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&revision=88943ae2a5a33c46c37ab4c9f622f51ac16206a2&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=running&filter-resultStatus=pending&filter-resultStatus=runnable
Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=194157772&repo=try
[task 2018-08-15T20:13:01.177Z] 20:13:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2018-08-15T20:13:01.178Z] 20:13:01 INFO - /builds/worker/workspace/build/src/sccache2/sccache /builds/worker/workspace/build/src/clang/bin/clang++ -target x86_64-apple-darwin11 -B /builds/worker/workspace/build/src/cctools/bin -isysroot /builds/worker/workspace/build/src/MacOSX10.11.sdk -o Unified_cpp_js_src15.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DWASM_HUGE_MEMORY -DENABLE_SHARED_ARRAY_BUFFER -DEXPORT_JS_API -DJS_HAS_CTYPES '-DDLL_PREFIX="lib"' '-DDLL_SUFFIX=".dylib"' -DFFI_BUILDING -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src/ctypes/libffi/include -I/builds/worker/workspace/build/src/js/src/ctypes/libffi/src/x86 -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Qunused-arguments -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++1z-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fno-common -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-stack-protector -fomit-frame-pointer -Werror -Wno-shadow -Werror=format -fno-strict-aliasing -MD -MP -MF .deps/Unified_cpp_js_src15.o.pp /builds/worker/workspace/build/src/obj-firefox/js/src/Unified_cpp_js_src15.cpp
[task 2018-08-15T20:13:01.179Z] 20:13:01 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/js/src/Unified_cpp_js_src15.cpp:2:
[task 2018-08-15T20:13:01.180Z] 20:13:01 INFO - In file included from /builds/worker/workspace/build/src/js/src/jit/CacheIR.cpp:7:
[task 2018-08-15T20:13:01.180Z] 20:13:01 INFO - /builds/worker/workspace/build/src/js/src/jit/CacheIR.h:1964:10: error: private field 'op_' is not used [-Werror,-Wunused-private-field]
[task 2018-08-15T20:13:01.181Z] 20:13:01 INFO - JSOp op_;
[task 2018-08-15T20:13:01.181Z] 20:13:01 INFO - ^
[task 2018-08-15T20:13:01.181Z] 20:13:01 INFO - 1 error generated.
[task 2018-08-15T20:13:01.181Z] 20:13:01 INFO - /builds/worker/workspace/build/src/config/rules.mk:1088: recipe for target 'Unified_cpp_js_src15.o' failed
[task 2018-08-15T20:13:01.181Z] 20:13:01 INFO - make[4]: *** [Unified_cpp_js_src15.o] Error 1
Flags: needinfo?(mgaudet)
| Assignee | ||
Comment 1•7 years ago
|
||
Attachment #9001677 -
Flags: review?(evilpies)
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(mgaudet)
Comment 2•7 years ago
|
||
Comment on attachment 9001677 [details] [diff] [review]
Guard CACHEIR_SPEW only member variable
Review of attachment 9001677 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jit/CacheIR.cpp
@@ +4770,5 @@
>
> bool
> CompareIRGenerator::tryAttachString(ValOperandId lhsId, ValOperandId rhsId)
> {
> MOZ_ASSERT(IsEqualityOp(op_));
Don't we use op_ in every function?
Comment 3•7 years ago
|
||
Comment on attachment 9001677 [details] [diff] [review]
Guard CACHEIR_SPEW only member variable
Yeah, pretty sure you confused this with NewObjectIRGenerator.
Attachment #9001677 -
Flags: review?(evilpies)
| Assignee | ||
Updated•7 years ago
|
Attachment #9001677 -
Attachment is obsolete: true
| Assignee | ||
Comment 4•7 years ago
|
||
Thanks for the catch. Silly conference programming.
Attachment #9001791 -
Flags: review?(evilpies)
| Assignee | ||
Comment 5•7 years ago
|
||
Attachment #9001792 -
Flags: review?(evilpies)
| Assignee | ||
Updated•7 years ago
|
Attachment #9001791 -
Attachment is obsolete: true
Attachment #9001791 -
Flags: review?(evilpies)
Updated•7 years ago
|
Attachment #9001792 -
Flags: review?(evilpies) → review+
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/fb7b47d50f59
Guard CACHEIR_SPEW only member variable in NewObjectIRGenerator. r=evilpie
Keywords: checkin-needed
Comment 7•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
| Reporter | ||
Comment 8•7 years ago
|
||
Verified fixed with yesterday's beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&revision=b41118149e8fed1a3a6d30a7e75bdce5c8daf740&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=runnable
Status: RESOLVED → VERIFIED
No need to track this for 63.
You need to log in
before you can comment on or make changes to this bug.
Description
•