Bug 1483806 - Guard CACHEIR_SPEW only member variable in NewObjectIRGenerator. r=evilpie